# minesweeper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: graphics.h  logic.h  main.h
source/: graphics.c  logic.c  main.c
src/: graphics.c  graphics.h  logic.c  logic.h  main.c  main.h
